--- a/index.html
+++ b/index.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <header class="cabecalho">
-        <nav class="cabecalho_menu">
-            <ul>
-            <li><a class="cabecalho_menu_link_1" href="index.html">About us</a></li>
-            <li><a class="cabecalho_menu_link_1" href="index.html">Plateform</a></li>
-            <li><a class="cabecalho_menu_link_1" href="index.html">Solution</a></li>
-            <li><a class="cabecalho_menu_link_1" href="index.html">Costumer</a></li>
-            </ul>
-            <div id="logo">
-                <img src="./imagens/logo.png" alt="logo do site">
-            </div>
-            <ul>
-                <li><a class="cabecalho_menu_link_2" href="index.html">Price</a></li>
-                <li><a class="cabecalho_menu_link_2" href="index.html">Contact</a></li>
-                <li><a class="cabecalho_menu_link_2" href="index.html">Login</a></li>
-                <li><a class="a-button" href="index.html">Sign up</a></li>
-            </ul>
-        </nav>
-
+      <nav class="cabecalho_menu">
+        <ul>
+          <li>
+            <a class="cabecalho_menu_link_1" href="index.html">About us</a>
+          </li>
+          <li>
+            <a class="cabecalho_menu_link_1" href="index.html">Plateform</a>
+          </li>
+          <li>
+            <a class="cabecalho_menu_link_1" href="index.html">Solution</a>
+          </li>
+          <li>
+            <a class="cabecalho_menu_link_1" href="index.html">Costumer</a>
+          </li>
+        </ul>
+        <div id="logo">
+          <img src="./imagens/logo.png" alt="logo do site" />
+        </div>
+        <ul>
+          <li><a class="cabecalho_menu_link_2" href="index.html">Price</a></li>
+          <li>
+            <a class="cabecalho_menu_link_2" href="index.html">Contact</a>
+          </li>
+          <li><a class="cabecalho_menu_link_2" href="index.html">Login</a></li>
+          <li><a class="a-button" href="index.html">Sign up</a></li>
+        </ul>
+      </nav>
     </header>
     <div class="site_titulo">
-        <div class="site_titulo_primeira_parte">
-            <h1>The Finance Solutions</h1> 
-            <h1>For Your Business</h1>
-        </div>
+      <div class="site_titulo_primeira_parte">
+        <h1>The Finance Solutions</h1>
+        <h1>For Your Business</h1>
+      </div>
     </div>
-</body>
+  </body>
 </html>
