--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Crypt Land</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="cabecalho">
       <nav class="cabecalho_menu">
-        <ul>
+        <ul class="container_ul_left">
           <li>
             <a class="cabecalho_menu_link_1" href="index.html">About us</a>
           </li>
@@ -24,24 +24,248 @@
             <a class="cabecalho_menu_link_1" href="index.html">Costumer</a>
           </li>
         </ul>
-        <div id="logo">
-          <img src="./imagens/logo.png" alt="logo do site" />
+        <div id="container_logo">
+          <img id="logo" src="./imagens/logo.png" alt="logo do site" />
         </div>
-        <ul>
-          <li><a class="cabecalho_menu_link_2" href="index.html">Price</a></li>
+        <ul class="container_ul_right">
+          <li>
+            <a class="cabecalho_menu_link_2" href="index.html">Price</a>
+          </li>
           <li>
             <a class="cabecalho_menu_link_2" href="index.html">Contact</a>
           </li>
-          <li><a class="cabecalho_menu_link_2" href="index.html">Login</a></li>
+          <li>
+            <a class="cabecalho_menu_link_2" href="index.html">Login</a>
+          </li>
           <li><a class="a-button" href="index.html">Sign up</a></li>
         </ul>
       </nav>
     </header>
-    <div class="site_titulo">
-      <div class="site_titulo_primeira_parte">
-        <h1>The Finance Solutions</h1>
-        <h1>For Your Business</h1>
+    <main>
+      <div class="container_titulos_search">
+        <div class="site_titulo_primeira_parte">
+          <h1>The Finance Solutions</h1>
+          <h1>For Your Business</h1>
+        </div>
+        <div class="site_subtitulo">
+          <h2>
+            Empower your finance team. The onestop plateform for all financial
+          </h2>
+          <h2>management of small and medium-sized business</h2>
+        </div>
+        <div class="container_email_search">
+          <div class="container_input_email">
+            <input type="email" placeholder="Enter your email address" />
+            <a class="button_email">Book a demo</a>
+          </div>
+        </div>
+        <div class="container_dashboard">
+          <img src="./imagens/dashboard.jpg" alt="" />
+        </div>
+      </div>
+      <div class="container_texto">
+        <h1>Working with world class partners.</h1>
+        <h1>We`re partner first!</h1>
+      </div>
+      <div class="container_logomarcas">
+        <img src="./imagens/logomarcas/img1.png" alt="logomarcas" />
+        <img src="./imagens/logomarcas/img2.png" alt="logomarcas" />
+        <img src="./imagens/logomarcas/img3.png" alt="logomarcas" />
+        <img src="./imagens/logomarcas/img4.png" alt="logomarcas" />
+        <img src="./imagens/logomarcas/img5.png" alt="logomarcas" />
+        <img src="./imagens/logomarcas/img6.png" alt="logomarcas" />
+      </div>
+      <div class="container_boosting">
+        <h1>Boosting Business. Today</h1>
+        <h1>and Tomorrow.</h1>
+      </div>
+      <div class="container_total_expense">
+        <img src="./imagens/total_expense.png" alt="" />
+        <div class="container_contents">
+          <div class="container_optimise">
+            <h1>Optimise expense</h1>
+            <h1>Management as a team</h1>
+            <div class="container_p">
+              <p>Bring harmony to team expenses with budget limits and</p>
+              <p>real-time monitiring. Freedom for your staff. Peace of</p>
+              <p>mind for you.</p>
+            </div>
+          </div>
+          <div class="container_button_explore">
+            <a class="button_explore">Explore more</a>
+          </div>
+        </div>
+      </div>
+      <div class="container_total_expense">
+        <div class="container_contents">
+          <div class="container_optimise">
+            <h1>Real-time accounting</h1>
+            <h1>at your fingertips.</h1>
+            <div class="container_p">
+              <p>Take the pain out of book keeping! Wave goodbye to</p>
+              <p>mountains of paperwork and endless email reminders.</p>
+              <p>There`s now a new way of accounting.</p>
+            </div>
+          </div>
+          <div class="container_button_explore">
+            <a class="button_explore">Explore more</a>
+          </div>
+        </div>
+        <img src="./imagens/mothly_invoice.png" alt="" />
+      </div>
+      <div class="container_modern_pessoas">
+        <div class="container_title_subtitle">
+          <div class="container_textos">
+            <div class="container_h1">
+              <h1>Modern Companies are</h1>
+              <h1>built on Capital.</h1>
+            </div>
+            <div class="container_ps">
+              <p>
+                we provide software for the financial and operational needs of
+                today`s
+              </p>
+              <p>
+                founders so they can get back to doing what they do
+                best-building/
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="container_pessoas">
+          <div class="container_person">
+            <img src="./imagens/people/person1.png" alt="" />
+            <div>
+              <h1>Benjamin McDonald</h1>
+              <h2>Founder, CEO</h2>
+            </div>
+          </div>
+          <div class="container_person">
+            <img src="./imagens/people/person2.png" alt="" />
+            <div>
+              <h1>Jett Yagan</h1>
+              <h2>Founder, CEO</h2>
+            </div>
+          </div>
+          <div class="container_person">
+            <img src="./imagens/people/person3.png" alt="" />
+            <div>
+              <h1>layla Cramp</h1>
+              <h2>Founder, CEO</h2>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container_right_plan">
+        <div class="container_text_right_plan">
+          <h1>Find the right plan</h1>
+        </div>
+        <div class="container_invest_p">
+          <p>
+            "Invest in your company's future with our comprehensive financial
+            solution. Contact us for pricing details
+          </p>
+          <p>
+            and see how we can help you streamline your finances and reach your
+            business goals.
+          </p>
+        </div>
+        <div class="container_plans">
+          <div class="container_card">
+            <div class="container_card_1">
+              <div class="container_card_1_text">
+                <h2>Basic</h2>
+                <h1>$0</h1>
+              </div>
+              <div class="container_descricao">
+                <p>
+                  Get a professional website
+                </p>
+                <p>
+                  designed according to your 
+                </p>
+                <p>
+                  needs.
+                </p>
+              </div>
+              <div class="container_items">
+                <p>Get a fully designed Website</p>
+                <p>Webflow Development</p>
+                <p>Limited Support</p>
+              </div>
+          </div>
+          <div class="container_button_select_plan">
+            <a class="button_select_plan">Select Plan</a>
+          </div>
+        </div>
+        <div class="container_card">
+          <div class="container_card_1">
+            <div class="container_card_1_text">
+              <h2>Basic</h2>
+              <h1>$0</h1>
+            </div>
+            <div class="container_descricao">
+              <p>
+                Get a professional website
+              </p>
+              <p>
+                designed according to your 
+              </p>
+              <p>
+                needs.
+              </p>
+            </div>
+            <div class="container_items">
+              <p>Get a fully designed Website</p>
+              <p>Webflow Development</p>
+              <p>Limited Support</p>
+            </div>
+        </div>
+        <div class="container_button_select_plan">
+          <a class="button_select_plan">Select Plan</a>
+        </div>
+      </div>
+      <div class="container_card">
+        <div class="container_card_1">
+          <div class="container_card_1_text">
+            <h2>Basic</h2>
+            <h1>$0</h1>
+          </div>
+          <div class="container_descricao">
+            <p>
+              Get a professional website
+            </p>
+            <p>
+              designed according to your 
+            </p>
+            <p>
+              needs.
+            </p>
+          </div>
+          <div class="container_items">
+            <p>Get a fully designed Website</p>
+            <p>Webflow Development</p>
+            <p>Limited Support</p>
+          </div>
+      </div>
+      <div class="container_button_select_plan">
+        <a class="button_select_plan">Select Plan</a>
+      </div>
       </div>
     </div>
+    <div class="container_message">
+        <p>
+          Teamollo delivered the site with inthe timeline as they requested. Inthe end, the client found a 50% increase in traffic with in days since its launch. They also had an impressive ability to use technologies that the company hasn`t used, which have also proved to be easy to use and reliable.
+        </p>
+        <div class="container_spec">
+          <img src="./imagens/profile_pic.png" alt="">
+          <div>
+            <h1>Ashley Cooper</h1>
+            <img src="./imagens/stars.png" alt="">
+          </div>
+        </div>
+    </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
