WEB Version ready ❤

--- a/index.html
+++ b/index.html
@@ -379,26 +379,110 @@
                   </div>
               </div>
           </div>
+        </div>
       </div>
+      <div class="container-bg-upgrade">
         <div class="container_upgrade">
-          <div class="container_upgrade_text">
-            <h1>Let`s Upgrade your</h1>
-            <h1>finances experience</h1>
-            <h1>by using Cryptland</h1>
-          </div>
-          <div class="container_upgrade_button_1">
-            <a class="container_button_request">Request Demo</a>
-          </div>
-          <div class="container_upgrade_button_2">
-            <a class="container_button_watch">Watch Video</a>
+        <div class="container_content">
+          <div class="container_text_button">
+            <div class="container_upgrade_text">
+              <h1>Let`s Upgrade your</h1>
+              <h1>finances experience</h1>
+              <h1>by using Cryptland</h1>
+            </div>
+            <div class="container_buttons_content">
+              <div class="container_upgrade_button_1">
+                <a class="container_button_request">Request Demo</a>
+              </div>
+              <div class="container_upgrade_button_2">
+                <a class="container_button_watch">Watch Video</a>
+              </div>
+            </div>
           </div>
           <div class="container_upgrade_imagem">
             <img src="./imagens/last_image.png" alt="imagem duas meninas no computador">
           </div>
         </div>
       </div>
+      </div>
   </main>
-  <footer></footer>
+  <footer>
+    <div class="container_footer">
+      <div class="container_left_part_footer">
+        <div class="container_logo_crypt">
+          <img src="./imagens/logo.png" alt="">
+        </div>
+        <div class="container_descrpt_p">
+          <p>Empower your finance team. The</p>
+          <p>onestop plateform for all financial</p>
+          <p>management of small and medium-</p>
+          <p>sized business.</p>
+        </div>
+        <div class="container_social_media">
+          <img src="./imagens/social_media/Icon awesome-twitter.png" alt="">
+          <img src="./imagens/social_media/Icon awesome-facebook.png" alt="">
+          <img src="./imagens/social_media/Icon awesome-linkedin.png" alt="">
+          <img src="./imagens/social_media/Icon awesome-youtube.png" alt="">
+        </div>
+      </div>
+      <div class="container_right_part">
+        <div class="container_column">
+          <div class="container_title">
+            <h1>Plateform</h1>
+          </div>
+          <div class="container_links">
+            <a href="#">Why Cloudwise</a>
+            <a href="#">Exprense management</a>
+            <a href="#">Automatic bookkeeping</a>
+            <a href="#">Integeration</a>
+          </div>
+        </div>
+  
+        <div class="container_column2">
+          <div class="container_title">
+            <h1>Company</h1>
+          </div>
+          <div class="container_links">
+            <a href="#">About us</a>
+            <a href="#">Plateform</a>
+            <a href="#">Solution</a>
+            <a href="#">Customer</a>
+            <a href="#">Pricing</a>
+          </div>
+        </div>
+  
+        <div class="container_column3">
+          <div class="container_title">
+            <h1>Resources</h1>
+          </div>
+          <div class="container_links">
+            <a href="#">Blog</a>
+            <a href="#">Help center</a>
+            <a href="#">Webinar</a>
+            <a href="#">FAQ's</a>
+            <a href="#">Status</a>
+          </div>
+        </div>
+  
+        <div class="container_column4">
+          <div class="container_title">
+            <h1>Solutions</h1>
+          </div>
+          <div class="container_links">
+            <a href="#">Self Employeed</a>
+            <a href="#">Email Business</a>
+            <a href="#">Sms & Statups</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="divisor_line"></div>
+    <div class="container_rights">
+      <p>© 2023 Crypt Land. All rights reserved</p>
+      <p>|</p>
+      <p>Cookie Settings, Anti-Spam, Privacy, User agreement, Legal Notice and Responsible Disclosure</p>
+    </div>
+  </footer>
 </body>
 
 </html>
